--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+members.csv
 
 # PyInstaller
 #  Usually these files are written by a python script from a template 
